@@ -1,15 +1,22 @@
 package faang.school.postservice.service;
 
+import faang.school.postservice.client.UserServiceClient;
+import faang.school.postservice.dto.post.PostDto;
+import faang.school.postservice.dto.user.UserDto;
 import faang.school.postservice.exception.DataValidationException;
+import faang.school.postservice.kafka.events.PostFollowersEvent;
+import faang.school.postservice.kafka.producer.KafkaEventProducer;
+import faang.school.postservice.mapper.PostMapper;
 import faang.school.postservice.model.Post;
 import faang.school.postservice.repository.PostRepository;
+import faang.school.postservice.service.feed.AuthorCacheService;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.ListUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -21,30 +28,30 @@ import java.util.Objects;
 import java.util.concurrent.Callable;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
-import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
-
-@Service
 @Slf4j
+@RequiredArgsConstructor
+@Service
 public class PostService {
+
     private final PostRepository postRepository;
     private final InternalServices internalServices;
-    private final ExecutorService executorService;
     private final AsyncModerationService asyncModerationService;
     private final SpellCheckerService spellCheckerService;
+    private final PostMapper postMapper;
+    private final AuthorCacheService authorCacheService;
+    private final ExecutorService executorService;
+    private final KafkaEventProducer kafkaEventProducer;
+    private final UserServiceClient userServiceClient;
+
     @Value("${moderation.threadSize}")
     private int threadSize;
 
-    public PostService(PostRepository postRepository,
-                       InternalServices internalServices,
-                       ThreadPoolTaskExecutor publishingThreadPool,
-                       AsyncModerationService asyncModerationService,
-                       SpellCheckerService spellCheckerService) {
-        this.postRepository = postRepository;
-        this.internalServices = internalServices;
-        this.asyncModerationService = asyncModerationService;
-        this.executorService = publishingThreadPool.getThreadPoolExecutor();
-        this.spellCheckerService = spellCheckerService;
+    public PostDto getPost(Long postId) {
+        Post post = postRepository.findById(postId)
+                .orElseThrow(() -> new DataValidationException("Specified post not found. Id:" + postId));
+        return postMapper.toDto(post);
     }
 
     @Transactional
@@ -62,19 +69,33 @@ public class PostService {
     public Post publish(Long postId) {
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new DataValidationException("Specified post not found. Id:" + postId));
+
         if (post.isPublished()) {
             throw new DataValidationException("Post is already published. Id:" + postId);
         }
+
         post.setPublished(true);
         post.setPublishedAt(LocalDateTime.now());
+
+        authorCacheService.saveAuthorCache(post.getAuthorId());
+
+        UserDto author = userServiceClient.getUser(post.getAuthorId());
+        List<Long> followers = author.getFollowers();
+
+        kafkaEventProducer.sendPostFollowersEvent(PostFollowersEvent.builder()
+                .postId(post.getId())
+                .authorId(post.getAuthorId())
+                .followersIds(followers)
+                .publishedAt(post.getPublishedAt())
+                .build());
+
         return postRepository.save(post);
     }
 
     @Transactional
     public Post update(Post post) {
         Post originalPost = postRepository.findById(post.getId())
-                .orElseThrow(() -> new DataValidationException("You are trying to update not existing post. Id:"
-                        + post.getId()));
+                .orElseThrow(() -> new DataValidationException("You are trying to update not existing post. Id:" + post.getId()));
         if (!Objects.equals(originalPost.getAuthorId(), post.getAuthorId())
                 || !Objects.equals(originalPost.getProjectId(), post.getProjectId())) {
             throw new DataValidationException("Post author cannot be changed!");
@@ -126,22 +147,20 @@ public class PostService {
     @Transactional(readOnly = true)
     public void moderatePosts() {
         List<Post> posts = postRepository.findByVerifiedDateIsNull();
-
-        if (posts == null || posts.isEmpty()) {
-            return;
-        }
+        if (posts == null || posts.isEmpty()) return;
 
         List<List<Post>> threads = splitIntoThreads(posts);
-
         List<CompletableFuture<Void>> futures = threads.stream()
                 .map(asyncModerationService::moderateThreadAsync)
                 .toList();
-
         CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
     }
 
-    private List<List<Post>> splitIntoThreads(List<Post> posts) {
-        return ListUtils.partition(posts, threadSize);
+    public List<PostDto> getPostsByIds(List<Long> ids) {
+        List<Post> posts = StreamSupport
+                .stream(postRepository.findAllById(ids).spliterator(), false)
+                .toList();
+        return postMapper.toDto(posts);
     }
 
     public List<Post> findPostsByResourceKeys(List<String> resourceKeys) {
@@ -155,30 +174,17 @@ public class PostService {
     @Transactional
     public void publishScheduledPosts() {
         List<Post> postsToPublish = postRepository.findReadyToPublish();
+        List<List<Post>> batches = ListUtils.partition(postsToPublish, 1000);
 
-        List<List<Post>> postsToPublishPartitioned = ListUtils.partition(postsToPublish, 1000);
         try {
-            List<Callable<Void>> tasks = postsToPublishPartitioned.stream()
+            List<Callable<Void>> tasks = batches.stream()
                     .map(this::publishChunkOfPosts)
                     .toList();
-
             executorService.invokeAll(tasks);
         } catch (Exception e) {
             log.error("Publishing posts chunk failed!", e);
         }
         CompletableFuture.completedFuture(null);
-    }
-
-    private Callable<Void> publishChunkOfPosts(List<Post> postsToPublish) {
-        return () -> {
-            postsToPublish.forEach(post -> {
-                post.setPublished(true);
-                post.setPublishedAt(LocalDateTime.now());
-            });
-
-            postRepository.saveAll(postsToPublish);
-            return null;
-        };
     }
 
     @Transactional
@@ -189,36 +195,18 @@ public class PostService {
 
         do {
             Page<Post> postsPage = postRepository.findByPublishedFalse(pageable);
-
-            if (postsPage == null || postsPage.isEmpty()) {
-                log.error("Received null page from repository");
-                break;
-            }
+            if (postsPage == null || postsPage.isEmpty()) break;
 
             List<Post> posts = postsPage.getContent();
+            if (posts.isEmpty()) break;
 
-            if (posts.isEmpty()) {
-                log.info("No more posts to process");
-                break;
-            }
-
-            List<String> contents = posts.stream()
-                    .map(Post::getContent)
-                    .collect(Collectors.toList());
-
+            List<String> contents = posts.stream().map(Post::getContent).toList();
             try {
-                List<String> correctedContents = spellCheckerService.sendBatchRequestToYandexSpeller(contents);
-
-                if (correctedContents.size() != contents.size()) {
-                    log.error("Size mismatch: correctedContents size = {}, contents size = {}",
-                            correctedContents.size(), contents.size());
-                    continue;
-                }
+                List<String> corrected = spellCheckerService.sendBatchRequestToYandexSpeller(contents);
+                if (corrected.size() != contents.size()) continue;
 
                 for (int i = 0; i < posts.size(); i++) {
-                    Post post = posts.get(i);
-                    String correctedContent = correctedContents.get(i);
-                    post.setContent(correctedContent);
+                    posts.get(i).setContent(corrected.get(i));
                 }
 
                 postRepository.saveAll(posts);
@@ -228,5 +216,20 @@ public class PostService {
 
             pageable = postsPage.nextPageable();
         } while (pageable.isPaged());
+    }
+
+    private List<List<Post>> splitIntoThreads(List<Post> posts) {
+        return ListUtils.partition(posts, threadSize);
+    }
+
+    private Callable<Void> publishChunkOfPosts(List<Post> postsToPublish) {
+        return () -> {
+            postsToPublish.forEach(post -> {
+                post.setPublished(true);
+                post.setPublishedAt(LocalDateTime.now());
+            });
+            postRepository.saveAll(postsToPublish);
+            return null;
+        };
     }
 }
